# biodynamo

./: CMakeLists.txt  hpc-install.sh
.github/workflows/: macos-ci.yml  macos-system-ci.yml  sonar-source.yml  ubuntu-system-ci.yml
benchmark/: main.cc
cmake/: selection-libbiodynamo.xml  utils.cmake
cmake/env/: thisbdm-hpc.fish  thisbdm-hpc.sh  thisbdm.fish  thisbdm.sh
demo/pyramidal_cell/: visualize.sh
demo/tradewind/: CMakeLists.txt  bdm.toml
demo/tradewind/src/: tradewind.cc  tradewind.h
paraview_plugin/Plugin/BDMGlyphFilter/: BDMGlyphFilter.cxx  BDMGlyphFilter.h  BDMGlyphFilter.xml
src/core/: model_initializer.h  simulation.cc
src/core/agent/: cell.cc
src/core/diffusion/: advection_diffusion_grid.cc  advection_diffusion_grid.h  continuum_interface.cc  diffusion_grid.cc  diffusion_grid.h  euler_depletion_grid.cc  euler_grid.cc
src/core/environment/: uniform_grid_environment.cc
src/core/execution_context/: in_place_exec_ctxt.cc  in_place_exec_ctxt.h
src/core/operation/: bound_space_op.h  default_ops.cc  mechanical_forces_op.h  mechanical_forces_op_cuda.cc  mechanical_forces_op_opencl.cc
src/core/param/: command_line_options.cc  param.cc  param.h  param_group.cc  param_group.h
src/core/util/: cpptoml.h  progress_bar.cc  toml_config.h
src/neuroscience/: neurite_element.cc  neuron_soma.cc  param.cc  param.h
test/unit/core/: advection_diffusion_test.cc
util/: build_root638.sh
util/build-third-party/: build-gcc_new.sh  build-paraview_new.sh  build-qt_new.sh  build-root_new.sh
util/installation/centos-7/: prerequisites.sh
(+10 files in other folders)
